[metadata]
name = differential_privacy
summary = Differential Privacy Library using Laplace Mechanism 
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Benardi Nunes
maintainer = Benardi Nunes
author-email = benardinunes@gmail.com
project_urls =
    Source=https://github.com/Benardi/LaplaceLib
requires-python = >=3.12
platforms = any
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = differential_privacy
    
[pbr]
warnerrors = True

[wheel]
universal = 0 
